--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="lib/animate.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
-  <title>Starter App - AppSus</title>
+  <title>AppSus</title>
 </head>
 
 <body>
