--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="lib/animate.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="icon" type="image/png" href="assets/img/favicon.png" />
   <title>AppSus</title>
 </head>
 
